RESOLVED FIXED301216
301207@main Regression - Address PKDateComponentsRange in test ipc/serialized-type-info.html
https://bugs.webkit.org/show_bug.cgi?id=301216
Summary 301207@main Regression - Address PKDateComponentsRange in test ipc/serialized...
Simon Lewis
Reported 2025-10-21 13:35:00 PDT
301207@main Regression - Address PKDateComponentsRange in test ipc/serialized-type-info.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-21 13:35:10 PDT
Simon Lewis
Comment 2 2025-10-21 13:41:00 PDT
EWS
Comment 3 2025-10-22 08:17:16 PDT
Committed 301947@main (06b79fc33269): <https://commits.webkit.org/301947@main> Reviewed commits have been landed. Closing PR #52760 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.