301207@main Regression - Address PKDateComponentsRange in test ipc/serialized-type-info.html https://bugs.webkit.org/show_bug.cgi?id=301216 rdar://163138720

Reviewed by Abrar Rahman Protyasha.

In 301207@main a "wrapped by" clause was moved behind a build time conditional. This removed the
generation of serialization metadata for the JS Test API.  This change adds it back in and lets
templates be generated to hook up the specific serializers in Source/WebKit/Shared/Cocoa/CoreIPCPKDateComponentsRange.mm

Tested by layout test ipc/serialized-type-info.html

* Source/WebKit/Shared/Cocoa/CoreIPCPKDateComponentsRange.mm:
(IPC::encodeObjectDirectly<PKDateComponentsRange>): Deleted.
(IPC::decodeObjectDirectlyRequiringAllowedClasses<PKDateComponentsRange>): Deleted.
* Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.serialization.in:

Canonical link: https://commits.webkit.org/301947@main